online-boutique-prod/online-boutique-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique-prod-frontend-ingress
  namespace: online-boutique-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: online-boutique-prod.lunohod-07.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
  tls:
  - hosts:
    - online-boutique-prod.lunohod-07.ru
    secretName: online-boutique-prod-tls # as expected by argocd-server
